--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Heavens Secret Art Gallery</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-
+	<!-- nav start -->
+	<nav class="navbar navbar-expand-lg bg-light navbar-light shadow">
+		<div class="container">
+			<img src="image/logo.png" class="logo_img" width="70" height="">
+			<a href="" class="navbar-brand logo me-auto">Heavens Secret</a>
+			<button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="Navbar">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item"><a href="" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Artist</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Gallery</a></li>
+					<li class="nav-item"><a href="" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- nav end -->
+<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
