--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<title>Heavens Secret Art Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="icon" type="image/png" size="16x16" href="image/logo.png">
 </head>
 <body>
 	<!-- nav start -->
 	<nav class="navbar navbar-expand-lg bg-light navbar-light shadow">
 		<div class="container">
-			<img src="image/logo.png" class="logo_img" width="70" height="">
+			<!-- <img src="image/logo.png" class="logo_img" width="70" height=""> -->
 			<a href="" class="navbar-brand logo me-auto">Heavens Secret</a>
 			<button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
 				<span class="navbar-toggler-icon"></span>
@@ -29,3 +30,4 @@
 <script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
