--- a/aritst.html
+++ b/aritst.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 	<title>Artist</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">	
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<style type="text/css">
+		.box{
+			margin-bottom: 50px;
+			line-height: 5px;
+		}
+	</style>	
 </head>
 <body>
 	<div class="artist container my-3">
@@ -10,7 +16,7 @@
 		<div class="select my-5">
 			<select>
 				<option>Select Aartist</option>
-				<option><a href="">Claude Monet</a></option>
+				<option><a href="">Claude Monet</a></option>				
 				<option><a href="">Georges Seurat</a></option>
 				<option><a href="">Johannes Vermeer</a></option>
 				<option><a href="">Jan Van Eyck</a></option>
@@ -19,39 +25,143 @@
 				<option><a href="">Rembrandt</a></option>
 				<option><a href="">Vincent Van Gogh</a></option>
 				<option><a href="">James Abbott McNeill Whister</a></option>
-				<option></option>
 			</select>
 		</div>
-		<div class="row mb-5">
-			<div class="box col my-5 ">
-				<p>Pablo Picasso</p>
-				<p>Femme Assise</p>
-				<img src="image/piasso/picasso1.jpg " width="300" height="400" class="text-center">
+		<div class="row mb-5">			
+			<div class="box col">
+				<p>Claude Monet</p>
+				<p>Argenteuil Red Boats</p>
+				<img src="image/Claude Monet/Argenteuil-Red-Boats.jpg " width="300" height="400">
 			</div>
-			<div class="box col my-5">
+			<div class="box col">
+				<p>Claude Monet</p>
+				<p>Bonquet of Sunflower</p>
+				<img src="image/Claude Monet/Bonquet of Sunflower.jpg " width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Claude Monet</p>
+				<p>Camille with a Dog</p>
+				<img src="image/Claude Monet/Camille with a.jpg " width="300" height="400">
+			</div>			
+			<div class="box col">
+				<p>Georges Seurat</p>
+				<p>Degas Café Concert at Les Ambassadeurs</p>
+				<img src="image/GS/220px-Degas_-_Café_Concert_-_at_Les_Ambassadeurs_1876-77.jpg" width="300" height="400">
+			</div>	
+			<div class="box col">
+				<p>Georges Seurat</p>
+				<p>Young Woman Powdering Herself</p>
+				<img src="image/GS/220px-Georges_Seurat,_1889-90,_Jeune_femme_se_poudrant_(Young_Woman_Powdering_Herself),_oil_on_canvas,_95.5_x_79.5_cm,_Courtauld_Institute_of_Art.jpg" width="300" height="400">
+			</div>	
+			<div class="box col">
+				<p>Georges Seurat</p>
+				<p>Le Cirque (The Circus)</p>
+				<img src="image/GS/220px-Georges_Seurat,_1891,_Le_Cirque_(The_Circus),_oil_on_canvas,_185_x_152_cm,_Musée_d'Orsay.jpg" width="300" height="400">
+			</div>			
+			<div class="box col">
+				<p>Johannes Vermeer</p>
+				<p>Christ</p>
+				<img src="image/Johannes vermeer/christ.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Johannes Vermeer</p>
+				<p>Concert</p>
+				<img src="image/Johannes vermeer/concert.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Johannes Vermeer</p>
+				<p>Diana</p>
+				<img src="image/Johannes vermeer/Diana.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Jan Van Eyck</p>
+				<p>The Madonna in the Church</p>
+				<img src="image/JVE/140px-Jan_van_Eyck_-_The_Madonna_in_the_Church_-_Google_Art_Project.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Jan Van Eyck</p>
+				<p>Man in a Blue Cap</p>
+				<img src="image/JVE/140px-Man_in_a_Blue_Cap_-_Jan_van_Eyck_-_Google_Cultural_Institute.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Jan Van Eyck</p>
+				<p>Annunciation</p>
+				<img src="image/JVE/180px-Annunciation_-_Jan_van_Eyck_-_1434_-_NG_Wash_DC.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Leonardo Da Vinci</p>
+				<p>Dreyfus Madonna</p>
+				<img src="image/Leonardo da Vinci/Dreyfus Madonna.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Leonardo Da Vinci</p>
+				<p>La Bella Ferronniere</p>
+				<img src="image/Leonardo da Vinci/La Bella Ferronniere.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Leonardo Da Vinci</p>
+				<p>Lady with an Ermine</p>
+				<img src="image/Leonardo da Vinci/Lady with an Ermine.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
 				<p>Pablo Picasso</p>
 				<p>Femme Assise</p>
 				<img src="image/piasso/picasso1.jpg" width="300" height="400">
 			</div>
-			<div class="box col my-5">
+			<div class="box col">
 				<p>Pablo Picasso</p>
-				<p>Femme Assise</p>
-				<img src="image/piasso/picasso1.jpg" width="300" height="400">
+				<p>Still Life with a Bottle of Rum</p>
+				<img src="image/piasso/picasso2.jpg" width="300" height="400">
 			</div>
-			<div class="box col ">
+			<div class="box col">
 				<p>Pablo Picasso</p>
-				<p>Femme Assise</p>
-				<img src="image/piasso/picasso1.jpg " width="300" height="400">
+				<p> Bouteille, clarinet, violon, journal</p>
+				<img src="image/piasso/picasso3.jpg" width="300" height="400">
 			</div>
-			<div class="box col ">
-				<p>Pablo Picasso</p>
-				<p>Femme Assise</p>
-				<img src="image/piasso/picasso1.jpg " width="300" height="400">
+			<div class="box col">
+				<p>Rembrandt</p>
+				<p>The Storm on the Sea of Galilee</p>
+				<img src="image/rembrant/rembrandt1.jpg" width="300" height="400">
 			</div>
-			<div class="box col ">
-				<p>Pablo Picasso</p>
-				<p>Femme Assise</p>
-				<img src="image/piasso/picasso1.jpg " width="300" height="400">
+			<div class="box col">
+				<p>Rembrandt</p>
+				<p>The Night Watch</p>
+				<img src="image/rembrant/rembrant2.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Rembrandt</p>
+				<p>Royal Castle, Warsaw</p>
+				<img src="image/rembrant/rembrant3.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Vincent Van Gogh</p>
+				<p>The Sower with Setting Sun</p>
+				<img src="image/vangogh/vangogh1.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Vincent Van Gogh</p>
+				<p>Fishing Boats on the Beach</p>
+				<img src="image/vangogh/vangogh2.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>Vincent Van Gogh</p>
+				<p>The Old Mill</p>
+				<img src="image/vangogh/vangogh3.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>James Abbott McNeill Whister</p>
+				<p>Arrangement in grey and black</p>
+				<img src="image/Gallery Of James/Arrangement in grey and black.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>James Abbott McNeill Whister</p>
+				<p>Grey and silver Old Bay</p>
+				<img src="image/Gallery Of James/Grey and silver Old Bay.jpg" width="300" height="400">
+			</div>
+			<div class="box col">
+				<p>James Abbott McNeill Whister</p>
+				<p>little Rose of lyme regis</p>
+				<img src="image/Gallery Of James/little Rose of lyme regis.jpg" width="300" height="400">
 			</div>
 		</div>
 	</div>	
