--- a/aritst.html
+++ b/aritst.html
@@ -13,20 +13,22 @@
 <body>
 	<div class="artist container my-3">
 		<h1>Artist</h1>		
-		<div class="select my-5">
-			<select>
-				<option>Select Aartist</option>
-				<option><a href="">Claude Monet</a></option>				
-				<option><a href="">Georges Seurat</a></option>
-				<option><a href="">Johannes Vermeer</a></option>
-				<option><a href="">Jan Van Eyck</a></option>
-				<option><a href="">Leonardo Da Vinci</a></option>
-				<option><a href="">Pablo Picasso</a></option>
-				<option><a href="">Rembrandt</a></option>
-				<option><a href="">Vincent Van Gogh</a></option>
-				<option><a href="">James Abbott McNeill Whister</a></option>
-			</select>
-		</div>
+		<li class="nav-item dropdown">
+		    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Select Artist</a>
+		    <ul class="dropdown-menu">
+		      <li><a class="dropdown-item" href="artist/claude-monet.html">Claude Monet</a></li>
+		      <li><a class="dropdown-item" href="#">Georges Seurat</a></li>
+		      <li><a class="dropdown-item" href="#">Johannes Vermeer</a></li>
+		      <li><a class="dropdown-item" href="#">Jan Van Eyck</a></li>      
+		      <li><a class="dropdown-item" href="#">Leonardo Da Vinci</a></li>
+		      <li><a class="dropdown-item" href="#">Pablo Picasso</a></li>
+		      <li><a class="dropdown-item" href="#">Rembrandt</a></li>
+		      <li><a class="dropdown-item" href="#">Vincent Van Gogh</a></li>
+		      <li><a class="dropdown-item" href="#">James Abbott McNeill Whister</a></li>		     
+		    </ul>
+		 </li>
+
+		 <!-- artists' photos -->
 		<div class="row mb-5">			
 			<div class="box col">
 				<p>Claude Monet</p>
@@ -164,7 +166,7 @@
 				<img src="image/Gallery Of James/little Rose of lyme regis.jpg" width="300" height="400">
 			</div>
 		</div>
-	</div>	
+	</div>
 
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
