--- a/artist.html
+++ b/artist.html
@@ -14,7 +14,23 @@
 	<div class="artist container my-3">
 		<h1>Artist</h1>		
 		<div class="select my-5">
-			<select>
+			<div class="nav-item dropdown">
+					    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="artist.html" role="button" aria-expanded="false">Select an artist</a>
+					    <ul class="dropdown-menu">
+					      <li><a class="dropdown-item" href="#">Pablo Picasso</a></li>
+					      <li><a class="dropdown-item" href="#">Vincent van Gogh</a></li>
+					      <li><a class="dropdown-item" href="#">Salvador Dali</a></li>
+					      <li><a class="dropdown-item" href="#">Leonardo da Vinci</a></li>
+					       
+					      <li><a class="dropdown-item" href="#">Claude Monet</a></li>
+					      <li><a class="dropdown-item" href="#">Johannes Vermeer</a></li>
+					      <li><a class="dropdown-item" href="#">James Abbott McNeill Whistler</a></li>
+					      <li><a class="dropdown-item" href="#">Gustav Klimt</a></li>
+					      <li><a class="dropdown-item" href="#">Jan van Eyck</a></li>
+					      <li><a class="dropdown-item" href="#">Georges Seura</a></li>
+					    </ul>
+					 </div>
+			<!-- <select>
 				<option>Select Aartist</option>
 				<option><a href="">Claude Monet</a></option>				
 				<option><a href="">Georges Seurat</a></option>
@@ -25,7 +41,7 @@
 				<option><a href="">Rembrandt</a></option>
 				<option><a href="">Vincent Van Gogh</a></option>
 				<option><a href="">James Abbott McNeill Whister</a></option>
-			</select>
+			</select> -->
 		</div>
 		<div class="row mb-5">			
 			<div class="box col">
