--- a/artist/james.html
+++ b/artist/james.html
@@ -7,79 +7,148 @@
 	<link rel="icon" type="image/png" size="16x16" href="../image/logo2.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 		
 </head>
 <body>
+	<!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+         <div class="container">
+            <img src="../image/logo2.png" class="logo_img" width="100" height="70">
+            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav nav-fill ms-auto">
+                  <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+               </ul>
+            </div>
+         </div>
+    </nav>
+    <!-- nav end -->
+
 	<div class="artist container my-3">
 		<h1>James Abbott McNeill Whister</h1>
 		<hr class="james">		
-		<a href="../aritst.html" class="btn btn-primary">Return to list of Artist</a>
-		<a href="#" class="btn btn-primary">Biography</a>
+		<a href="../artist.html" class="btn">Return to list of Artist</a>
+		<a href="#" class="btn">Biography</a>
 
 		 <!-- artists' photos -->		
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 my-5">	
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Arrangement in grey and black</p>
-				<img src="../image/Gallery Of James/Arrangement in grey and black.jpg"  width="250" height="350">
-			</div>	
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Grey and silver Old Bay</p>
-				<img src="../image/Gallery Of James/Grey and silver Old Bay.jpg"  width="250" height="350">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+			<div class="col my-4">	
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Arrangement in grey and black.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Arrangement in grey and black</h5>					
+				</div>	
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">little Rose of lyme regis</p>
-				<img src="../image/Gallery Of James/little Rose of lyme regis.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Grey and silver Old Bay.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Grey and silver Old Bay</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Nocturne</p>
-				<img src="../image/Gallery Of James/Nocturne.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/little Rose of lyme regis.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">little Rose of lyme regis</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Orange Note</p>
-				<img src="../image/Gallery Of James/Orange Note.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Nocturne.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Nocturne</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Thames in Ice</p>
-				<img src="../image/Gallery Of James/Thames in Ice.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Orange Note.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Orange Note</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">The Bathing Post</p>
-				<img src="../image/Gallery Of James/The Bathing Post.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Thames in Ice.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Thames in Ice</h5>
+					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">The Canal Amsterdam</p>
-				<img src="../image/Gallery Of James/The Canal Amsterdam.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/The Bathing Post.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">The Bathing Post</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">The Falling Rocket</p>
-				<img src="../image/Gallery Of James/The Falling Rocket.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/The Canal Amsterdam.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">The Canal Amsterdam</h5>					
+				</div>
+			</div>
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/The Falling Rocket.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">The Falling Rocket</h5>					
+				</div>
 			</div>		
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">The Peacock Room</p>
-				<img src="../image/Gallery Of James/The Peacock Room.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/The Peacock Room.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">The Peacock Room</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">The Princess</p>
-				<img src="../image/Gallery Of James/The Princess.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/The Princess.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">The Princess</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">James Abbott McNeill Whister</h5>
-				<p class="mb-1" class="mb-1">Valparasio Harbor</p>
-				<img src="../image/Gallery Of James/Valparasio Harbor.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Gallery Of James/Valparasio Harbor.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(James Abbott McNeill Whister)</h5>
+					<h5 class="mt-3 mb-0">Valparasio Harbor</h5>					
+				</div>
 			</div>
-		</div>
+		</div>	
 	</div>
+
+	<!-- footer start -->
+    <footer class="container-fluid bg-dark text-center mt-5">
+         <div class="py-5">
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+    </footer>
+    <!-- footer end -->
 
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
