--- a/artist/jan-van.html
+++ b/artist/jan-van.html
@@ -7,79 +7,147 @@
 	<link rel="icon" type="image/png" size="16x16" href="../image/logo2.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	
 </head>
 <body>
+	<!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+         <div class="container">
+            <img src="../image/logo2.png" class="logo_img" width="100" height="70">
+            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav nav-fill ms-auto">
+                  <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+               </ul>
+            </div>
+         </div>
+    </nav>
+    <!-- nav end -->
+
 	<div class="artist container my-3">
 		<h1>Jan Van Eyck</h1>
 		<hr class="jve">		
-		<a href="../aritst.html" class="btn btn-primary">Return to list of Artist</a>
-		<a href="#" class="btn btn-primary">Biography</a>
+		<a href="../artist.html" class="btn">Return to list of Artist</a>
+		<a href="#" class="btn">Biography</a>
 
 		 <!-- artists' photos -->
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 my-5">			
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Madonna in the Church</p>
-				<img src="../image/JVE/140px-Jan_van_Eyck_-_The_Madonna_in_the_Church_-_Google_Art_Project.jpg"  width="250" height="350">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+			<div class="col my-4">			
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/140px-Jan_van_Eyck_-_The_Madonna_in_the_Church_-_Google_Art_Project.jpg" class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Madonna in the Church</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Man in a Blue Cap</p>
-				<img src="../image/JVE/140px-Man_in_a_Blue_Cap_-_Jan_van_Eyck_-_Google_Cultural_Institute.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/140px-Man_in_a_Blue_Cap_-_Jan_van_Eyck_-_Google_Cultural_Institute.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Man in a Blue Cap</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Annunciation</p>
-				<img src="../image/JVE/180px-Annunciation_-_Jan_van_Eyck_-_1434_-_NG_Wash_DC.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/180px-Annunciation_-_Jan_van_Eyck_-_1434_-_NG_Wash_DC.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Annunciation</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Portrait of Margaret</p>
-				<img src="../image/JVE/180px-Portrait_of_Margaret_van_Eyck.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/180px-Portrait_of_Margaret_van_Eyck.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Portrait of Margaret</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">The Ghent Altarpiece</p>
-				<img src="../image/JVE/220px-Jan_van_Eyck_-_The_Ghent_Altarpiece_-_Virgin_Mary_(detail)_-_WGA07629.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/220px-Jan_van_Eyck_-_The_Ghent_Altarpiece_-_Virgin_Mary_(detail)_-_WGA07629.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">The Ghent Altarpiece</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Man in a Turban</p>
-				<img src="../image/JVE/220px-Portrait_of_a_Man_in_a_Turban_(Jan_van_Eyck)_with_frame.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/220px-Portrait_of_a_Man_in_a_Turban_(Jan_van_Eyck)_with_frame.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Man in a Turban</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Triptych of Mary</p>
-				<img src="../image/JVE/280px-Jan_van_Eyck_-_Triptych_of_Mary_and_Child,_St._Michael,_and_the_Catherine_-_Google_Art_Project.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/280px-Jan_van_Eyck_-_Triptych_of_Mary_and_Child,_St._Michael,_and_the_Catherine_-_Google_Art_Project.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Triptych of Mary</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Virgin of Chancellor Rolin</p>
-				<img src="../image/JVE/280px-Jan_van_Eyck_The_Virgin_of_Chancellor_Rolin.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/280px-Jan_van_Eyck_The_Virgin_of_Chancellor_Rolin.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Virgin of Chancellor Rolin</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Arnolfini Portrait</p>
-				<img src="../image/JVE/300px-Arnolfini_Portrait_2.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/300px-Arnolfini_Portrait_2.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Arnolfini Portrait</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">The Crucifixion</p>
-				<img src="../image/JVE/300px-Van_Eyck_-_The_Crucifixion;_The_Last_Judgment.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/300px-Van_Eyck_-_The_Crucifixion;_The_Last_Judgment.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">The Crucifixion</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Chanoine Van der Paele</p>
-				<img src="../image/JVE/360px-La_Madone_au_Chanoine_Van_der_Paele.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/360px-La_Madone_au_Chanoine_Van_der_Paele.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Chanoine Van der Paele</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Jan Van Eyck</h5>
-				<p class="mb-1" class="mb-1">Lamgods open</p>
-				<img src="../image/JVE/Lamgods_open.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/JVE/Lamgods_open.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Jan Van Eyck)</h5>
+					<h5 class="mt-3 mb-0">Lamgods open</h5>					
+				</div>
 			</div>									
 		</div>
 	</div>
+
+	<!-- footer start -->
+    <footer class="container-fluid bg-dark text-center mt-5">
+         <div class="py-5">
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+    </footer>
+    <!-- footer end -->
 
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
