--- a/artist/georges-seurat.html
+++ b/artist/georges-seurat.html
@@ -7,80 +7,147 @@
 	<link rel="icon" type="image/png" size="16x16" href="../image/logo2.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	
-	</style>
 </head>
 <body>
+	<!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+         <div class="container">
+            <img src="../image/logo2.png" class="logo_img" width="100" height="70">
+            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav nav-fill ms-auto">
+                  <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+               </ul>
+            </div>
+         </div>
+    </nav>
+    <!-- nav end -->
+
 	<div class="artist container my-3">
 		<h1>Georges Seurat</h1>
 		<hr class="georges">		
-		<a href="../aritst.html" class="btn btn-primary">Return to list of Artist</a>
-		<a href="#" class="btn btn-primary">Biography</a>
+		<a href="../artist.html" class="btn">Return to list of Artist</a>
+		<a href="#" class="btn">Biography</a>
 
 		 <!-- artists' photos -->
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 my-5">			
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1" class="mb-1">Degas Café Concert</p>
-				<img src="../image/GS/220px-Degas_-_Café_Concert_-_at_Les_Ambassadeurs_1876-77.jpg"  width="250" height="350">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+			<div class="col my-4">			
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_034.jpg " class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Degas Café Concert</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Young Woman Powdering</p>
-				<img src="../image/GS/220px-Georges_Seurat,_1889-90,_Jeune_femme_se_poudrant_(Young_Woman_Powdering_Herself),_oil_on_canvas,_95.5_x_79.5_cm,_Courtauld_Institute_of_Art.jpg " width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/220px-Georges_Seurat,_1889-90,_Jeune_femme_se_poudrant_(Young_Woman_Powdering_Herself),_oil_on_canvas,_95.5_x_79.5_cm,_Courtauld_Institute_of_Art.jpg " class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Young Woman Powdering</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Le Cirque(The Circus)</p>
-				<img src="../image/GS/220px-Georges_Seurat,_1891,_Le_Cirque_(The_Circus),_oil_on_canvas,_185_x_152_cm,_Musée_d'Orsay.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_010.jpg " class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Le Cirque(The Circus)</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Georges Seurat</p>
-				<img src="../image/GS/220px-Georges_Seurat_066.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/220px-Georges_Seurat_066.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Georges Seurat</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">A Sunday on La Grande Jatte</p>
-				<img src="../image/GS/Georges_Seurat_048.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_048.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">A Sunday on La Grande Jatte</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Le Chahut</p>
-				<img src="../image/GS/300px-Georges_Seurat,_1889-90,_Le_Chahut,_Kröller-Müller_Museum.jpg "width="250" height="350">
+			<div class="col my-4">
+				<img src="../image/GS/Georges_Seurat_007.jpg "class="img-fluid rounded gallery">
+				<div class="mb-4 col text-center">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Le Chahut</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Vase of Flowers</p>
-				<img src="../image/GS/Georges_Seurat,_c.1879-81,_Vase_of_Flowers,_oil_on_canvas,_46.3_x_38.5_cm,_Fogg_Museum.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat,_c.1879-81,_Vase_of_Flowers,_oil_on_canvas,_46.3_x_38.5_cm,_Fogg_Museum.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Vase of Flowers</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Landscape at Saint Ouen</p>
-				<img src="../image/GS/Georges_Seurat_-_Landscape_at_Saint-Ouen_PC_7.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_-_Landscape_at_Saint-Ouen_PC_7.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Landscape at Saint Ouen</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">View of Fort Samson</p>
-				<img src="../image/GS/Georges_Seurat_-_View_of_Fort_Samson.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_-_View_of_Fort_Samson.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">View of Fort Samson</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">The Building</p>
-				<img src="../image/GS/Georges_Seurat_007.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_007.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">The Building</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Georges Seurat</p>
-				<img src="../image/GS/Georges_Seurat_010.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_010.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Georges Seurat</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Georges Seurat</h5>
-				<p class="mb-1">Georges Seurat</p>
-				<img src="../image/GS/Georges_Seurat_034.jpg "width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/GS/Georges_Seurat_034.jpg "class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Georges Seurat)</h5>
+					<h5 class="mt-3 mb-0">Georges Seurat</h5>					
+				</div>
 			</div>			
 		</div>
 	</div>
+
+	<!-- footer start -->
+    <footer class="container-fluid bg-dark text-center mt-5">
+         <div class="py-5">
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+    </footer>
+    <!-- footer end -->
 
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
