--- a/artist/leonardo.html
+++ b/artist/leonardo.html
@@ -7,79 +7,147 @@
 	<link rel="icon" type="image/png" size="16x16" href="../image/logo2.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	
 </head>
 <body>
+	<!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+         <div class="container">
+            <img src="../image/logo2.png" class="logo_img" width="100" height="70">
+            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav nav-fill ms-auto">
+                  <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+               </ul>
+            </div>
+         </div>
+    </nav>
+    <!-- nav end -->
+
 	<div class="artist container my-3">
 		<h1>Leonardo Da Vinci</h1>
 		<hr class="leonardo">		
-		<a href="../aritst.html" class="btn btn-primary">Return to list of Artist</a>
-		<a href="#" class="btn btn-primary">Biography</a>
+		<a href="../artist.html" class="btn">Return to list of Artist</a>
+		<a href="#" class="btn">Biography</a>
 
 		 <!-- artists' photos -->
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 my-5">			
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">Dreyfus Madonna</p>
-				<img src="../image/Leonardo da Vinci/Dreyfus Madonna.jpg"  width="250" height="350">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">			
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/Dreyfus Madonna.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">Dreyfus Madonna</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">La Bella Ferronniere</p>
-				<img src="../image/Leonardo da Vinci/La Bella Ferronniere.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/La Bella Ferronniere.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">La Bella Ferronniere</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">Lady with an Ermine</p>
-				<img src="../image/Leonardo da Vinci/Lady with an Ermine.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/Lady with an Ermine.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">Lady with an Ermine</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">Madonna of the Yarnwinder</p>
-				<img src="../image/Leonardo da Vinci/Madonna of the Yarnwinder.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/Madonna of the Yarnwinder.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">Madonna of the Yarnwinder</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">Saint Jerome in the Wilderness</p>
-				<img src="../image/Leonardo da Vinci/Saint Jerome in the Wilderness.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/Saint Jerome in the Wilderness.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">Saint Jerome in the Wilderness</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">Salvator Mondi</p>
-				<img src="../image/Leonardo da Vinci/Salvator Mondi.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/Salvator Mondi.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">Salvator Mondi</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">St.John the Baptist</p>
-				<img src="../image/Leonardo da Vinci/St.John the Baptist.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/St.John the Baptist.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">St.John the Baptist</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">The Adoration of the Magi</p>
-				<img src="../image/Leonardo da Vinci/The Adoration of the Magi.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/The Adoration of the Magi.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">The Adoration of the Magi</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">The Battle of Anghiari</p>
-				<img src="../image/Leonardo da Vinci/The Battle of Anghiari.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/The Battle of Anghiari.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">The Battle of Anghiari</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">The Last Super</p>
-				<img src="../image/Leonardo da Vinci/The Last Super.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/The Last Super.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">The Last Super</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">The Mona Lisa</p>
-				<img src="../image/Leonardo da Vinci/The Mona Lisa.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/The Mona Lisa.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">The Mona Lisa</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Leonardo Da Vinci</h5>
-				<p class="mb-1" class="mb-1">The virgin and Child with St Anne</p>
-				<img src="../image/Leonardo da Vinci/The virgin and Child with St Anne.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/Leonardo da Vinci/The virgin and Child with St Anne.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Leonardo Da Vinci)</h5>
+					<h5 class="mt-3 mb-0">The virgin and Child with St Anne</h5>					
+				</div>
 			</div>											
 		</div>
 	</div>
+
+	<!-- footer start -->
+    <footer class="container-fluid bg-dark text-center mt-5">
+         <div class="py-5">
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+    </footer>
+    <!-- footer end -->
 
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
