--- a/artist/rembrandt.html
+++ b/artist/rembrandt.html
@@ -7,80 +7,147 @@
 	<link rel="icon" type="image/png" size="16x16" href="../image/logo2.png">
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Imbue:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 		
 </head>
 <body>
+	<!-- nav start -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light shadow" id="nav">
+         <div class="container">
+            <img src="../image/logo2.png" class="logo_img" width="100" height="70">
+            <a href="" class="navbar-brand logo me-auto px-5" id="name">Heaven's Secret</a>
+            <button class="navbar-toggler" data-bs-target="#Navbar" data-bs-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav nav-fill ms-auto">
+                  <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
+                  <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+               </ul>
+            </div>
+         </div>
+    </nav>
+    <!-- nav end -->
+
 	<div class="artist container my-3">
 		<h1>Rembrandt</h1>
 		<hr class="rembrant">		
-		<a href="../aritst.html" class="btn btn-primary">Return to list of Artist</a>
-		<a href="#" class="btn btn-primary">Biography</a>
+		<a href="../artist.html" class="btn">Return to list of Artist</a>
+		<a href="#" class="btn">Biography</a>
 
 		 <!-- artists' photos -->
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 my-5">			
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">The Storm on the Sea of Galilee</p>
-				<img src="../image/rembrant/rembrandt1.jpg"  width="250" height="350">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">			
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrandt1.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">The Storm on the Sea of Galilee</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">The Night Watch</p>
-				<img src="../image/rembrant/rembrant2.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant2.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">The Night Watch</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1"> Royal Castle, Warsaw</p>
-				<img src="../image/rembrant/rembrant3.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant3.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0"> Royal Castle, Warsaw</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Matthew and the Angel</p>
-				<img src="../image/rembrant/rembrant4.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant4.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Matthew and the Angel</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Artist in His Studio</p>
-				<img src="../image/rembrant/rembrant5.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant5.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Artist in His Studio</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Old man with a fur hat</p>
-				<img src="../image/rembrant/rembrant6.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant6.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Old man with a fur hat</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Portrait of Saskia van</p>
-				<img src="../image/rembrant/rembrant7.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant7.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Portrait of Saskia van</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Sacrifice of Isaac</p>
-				<img src="../image/rembrant/rembrant8.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant8.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Sacrifice of Isaac</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Joseph's Dream</p>
-				<img src="../image/rembrant/rembrant9.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant9.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Joseph's Dream</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Jacob Blessing the Sons of Joseph</p>
-				<img src="../image/rembrant/rembrant10.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant10.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Jacob Blessing the Sons of Joseph</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Ahasuerus and Haman</p>
-				<img src="../image/rembrant/rembrant11.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant11.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Ahasuerus and Haman</h5>					
+				</div>
 			</div>
-			<div class="box col mx-5 mb-5">
-				<h5 class="mt-0 mb-0">Rembrandt</h5>
-				<p class="mb-1" class="mb-1">Lucretia</p>
-				<img src="../image/rembrant/rembrant12.jpg"  width="250" height="350">
+			<div class="col my-4">
+				<div class="mb-4 col text-center">
+					<img src="../image/rembrant/rembrant12.jpg"  class="img-fluid rounded gallery">
+					<h5 class="mt-3 mb-0">(Rembrandt)</h5>
+					<h5 class="mt-3 mb-0">Lucretia</h5>					
+				</div>
 			</div>
-
 		</div>
 	</div>
+
+	<!-- footer start -->
+    <footer class="container-fluid bg-dark text-center mt-5">
+         <div class="py-5">
+            <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+            <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+            <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
+            <p class="text-muted">
+               <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
+               <a href="http://facebook.com"><i class="fab fa-facebook-square fa-2x mx-2" id="fb"></i></a>
+               <a href="http://viber.com"><i class="fab fa-viber fa-2x mx-2" id="vb"></i></a>
+               <a href="http://gmail.com"><i class="fas fa-envelope-open-text fa-2x mx-2" id="mail"></i></a>
+            </p>
+         </div>
+    </footer>
+    <!-- footer end -->
 
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
