--- a/gallery2.html
+++ b/gallery2.html
@@ -20,9 +20,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="Navbar">
 				<ul class="navbar-nav nav-pills nav-fill ms-auto">
-					<li class="nav-item mx-4"><a href="" class="nav-link">Home</a></li>
-					<!-- <li class="nav-item mx-4"><a href="" class="nav-link">Artist</a></li> -->
-					<li class="nav-item dropdown">
+					<li class="nav-item mx-4"><a href="index.html" class="nav-link">Home</a></li>
+					<li class="nav-item mx-4"><a href="artist.html" class="nav-link">Artist</a></li>
+					<!-- <li class="nav-item dropdown">
 					    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Artist</a>
 					    <ul class="dropdown-menu">
 					      <li><a class="dropdown-item" href="#">Pablo Picasso</a></li>
@@ -37,10 +37,10 @@
 					      <li><a class="dropdown-item" href="#">Jan van Eyck</a></li>
 					      <li><a class="dropdown-item" href="#">Georges Seura</a></li>
 					    </ul>
-					 </li>
-					<li class="nav-item mx-4"><a href="" class="nav-link">Gallery</a></li>
-					<li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
-					<li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+					 </li> -->
+					<li class="nav-item mx-4"><a href="gallery.html" class="nav-link">Gallery</a></li>
+					<li class="nav-item mx-4"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item mx-4"><a href="contact.html" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -355,8 +355,8 @@
 
 		<nav aria-label="...">
 	 		 <ul class="pagination justify-content-end">
-	    		<li class="page-item disabled">
-	      		<a class="page-link" href="#" tabindex="-1">Previous</a>
+	    		<li class="page-item ">
+	      		<a class="page-link" href="gallery1.html" tabindex="-1">Previous</a>
 	    		</li>
 	    		<li class="page-item "><a class="page-link" href="gallery.html">1</a></li>
 	    		<li class="page-item ">
@@ -377,11 +377,11 @@
 	<footer class="container-fluid bg-dark text-center">
 
 		<div class="py-5">
-			<a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
-			<a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
-			<a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-			<a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-			<a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+			<a href="index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
+			<a href="artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
+			<a href="gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
+			<a href="about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+			<a href="contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
 			<p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
 			<p class="text-muted">
 				<a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
