--- a/artist/rembrandt.html
+++ b/artist/rembrandt.html
@@ -39,7 +39,7 @@
 		<h1>Rembrandt</h1>
 		<hr class="rembrant">		
 		<a href="../artist.html" class="btn">Return to list of Artist</a>
-		<a href="#" class="btn">Biography</a>
+		<a href="rembrandt-bio.html" class="btn">Biography</a>
 
 		 <!-- artists' photos -->
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">			
