--- a/artist/georges-seurat.html
+++ b/artist/georges-seurat.html
@@ -27,8 +27,8 @@
                   <li class="nav-item mx-4"><a href="../index.html" class="nav-link">Home</a></li>
                   <li class="nav-item mx-4"><a href="../artist.html" class="nav-link">Artist</a></li> 
                   <li class="nav-item mx-4"><a href="../gallery.html" class="nav-link">Gallery</a></li>
-                  <li class="nav-item mx-4"><a href="" class="nav-link">About</a></li>
-                  <li class="nav-item mx-4"><a href="" class="nav-link">Contact</a></li>
+                  <li class="nav-item mx-4"><a href="../about.html" class="nav-link">About</a></li>
+                  <li class="nav-item mx-4"><a href="../contact.html" class="nav-link">Contact</a></li>
                </ul>
             </div>
          </div>
@@ -130,14 +130,14 @@
 		</div>
 	</div>
 
-	<!-- footer start -->
+<!-- footer start -->
     <footer class="container-fluid bg-dark text-center mt-5">
          <div class="py-5">
             <a href="../index.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Home</a>
             <a href="../artist.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Artist</a>
             <a href="../gallery.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Gallery</a>
-            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
-            <a href="" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
+            <a href="../about.html" class="mx-3 mx-md-4 text-decoration-none text-muted">About</a>
+            <a href="../contact.html" class="mx-3 mx-md-4 text-decoration-none text-muted">Contact</a>
             <p class="text-muted my-3">CopyRight Heaven's Secret @ 2021</p>
             <p class="text-muted">
                <a href="tel:091111111"><i class="fas fa-mobile-alt fa-2x mx-2" id="ph"></i></a>
